[gd_scene load_steps=8 format=2]

[ext_resource path="res://Paddle/Paddle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Boundary/Boundary.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://pong.gd" type="Script" id=5]
[ext_resource path="res://goal.ogg" type="AudioStream" id=6]
[ext_resource path="res://Score/Score.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640, 2 )

[node name="Pong" type="Node"]
script = ExtResource( 5 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Center" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_right = 6.0
rect_min_size = Vector2( 6, 0 )

[node name="LeftScore" parent="." instance=ExtResource( 7 )]
margin_right = 112.0
margin_bottom = 100.0

[node name="RightScore" parent="." instance=ExtResource( 7 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -112.0
margin_right = -64.0
margin_bottom = 100.0

[node name="LeftPaddle" parent="." instance=ExtResource( 1 )]
position = Vector2( 20, 360 )

[node name="RightPaddle" parent="." instance=ExtResource( 1 )]
position = Vector2( 1260, 360 )
key_up = 16777232
key_down = 16777234

[node name="Ball" parent="." instance=ExtResource( 4 )]

[node name="Ceiling" parent="." instance=ExtResource( 2 )]

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 640, 722 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 1 )

[node name="Goal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="goal_scored" from="Ball" to="." method="_on_Ball_goal_scored"]
